[tool.poetry]
name = "doordash-generator"
version = "0.1.0"
description = ""
authors = ["masked <37945842+Maskeddd@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11.1"
playwright = "^1.29.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
